[tool.poetry]
name = "hsc_assembler"
version = "0.1.0"
description = "Assembler for the hsc (name TBD) ISA (https://github.com/HomebrewSiliconClub/Processor)"
authors = ["Bolun Thompson <abolunthompson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
