[tool.poetry]
name = "hsc_assembler"
version = "0.2.0"
description = "Assembler for the hsc (name TBD) ISA (https://github.com/HomebrewSiliconClub/Processor)"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/HomebrewSiliconClub/Processor/tree/master/tools/sources/assembler"
homepage = "https://github.com/HomebrewSiliconClub/Processor"
keywords = ["assembler"]
classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: Developers", "Programming Language :: Assembly", "Topic :: Software Development :: Assemblers", "Typing :: Typed"]
authors = ["Bolun Thompson <abolunthompson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
hsc_assembler = 'hsc_assembler.main:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
